--- a/index.html
+++ b/index.html
@@ -54,15 +54,14 @@
                 <li class="mr-lg-4 mr-3 active"><a href="#">Home</a></li>
                 <li class="mr-lg-4 mr-3"><a href="#about">About</a></li>
                 <li class="mr-lg-4 mr-3"><a href="#services">Services</a></li>
-                <li class="mr-lg-4 mr-3"><a href="#experience">Experience</a></li>
+                <li class="mr-lg-4 mr-3"><a href="#experience">Education</a></li>
                 <li class="mr-lg-4 mr-3">
                 <!-- First Tier Drop Down -->
                 <label for="drop-2" class="toggle">Dropdown <span class="fa fa-angle-down" aria-hidden="true"></span> </label>
                 <a href="#">Dropdown <span class="fa fa-angle-down" aria-hidden="true"></span></a>
                 <input type="checkbox" id="drop-2"/>
                 <ul>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#text">Quoted Text</a></li>
+                   <li><a href="#text">Quoted Text</a></li>
                 </ul>
                 </li>
                 <li><a href="#contact">Contact</a></li>
@@ -100,12 +99,55 @@
 			<div class="col-lg-4">
 				<h4 class="">Hi i'm RANJITH R</h4>
 				<p class="my-4">Am a web designer and web developer who starting carrier,had experience in Designing with HTML:5,Bootstrap and jquery and Developing with java. Am fueled by my passion to becoming a expert programmer. I considered mysel a "learner" eager to learn new technologies in programming. I belives maindfulness in the work place is the key to success.</p>
-				<a href="#"> Download CV <span class="fa ml-2 fa-download"></span> </a>	
+			
 			</div>
-			<div class="col-lg-6 col-md-6 my-lg-4 my-5">
+			<div class="col-lg-4 ">
 				<img src="images/ranjith.jpg" alt="" class="img-fluid" />
 			</div>
-			
+		<div class="col-lg-4 bar-grids">
+			<div class="wthree_skills">
+				<h6 class="mb-2">
+					<div class="container">
+						<h3><i><b> Web Designing</b></i></h3>
+						<div class="progress">
+						  <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+							90%
+						  </div>
+						</div>
+						</div>
+						<br><br>
+				    <div class="container">
+					    <h3><i><b> Visual Studio code</b></i></h3>
+						<div class="progress">
+							<div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
+								85%
+							</div>
+							</div>
+					</div>
+					<br><br>
+			        <div class="container">
+					    <h3><i><b> jQuery/Bootstrap</b></i></h3>
+						<div class="progress">
+							<div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width:75%">
+								75%
+							</div>
+							</div>
+					</div>
+					<br><br>
+					<div class="container">
+					    <h3><i><b> Photoshop</b></i></h3>
+						<div class="progress">
+							<div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
+								85%
+							</div>
+							</div>
+				    </div>
+				</h6>
+				</div>
+
+			</div>
+
+		</div>
 		</div>
 	</div>
 </section>
@@ -125,7 +167,7 @@
 				<h3><span class="fa mr-2 fa-laptop" aria-hidden="true"></span>WED DEVELOPMENT</h3>
 				<p>Web Development is developing a web site ,it is the core part also called Back-end.The web site wants to store some datas of user,so developer done in this stage using sql.Web development can range from developing a simple single static page of plain text to complex Web-based internet applications.had knowledge in Ja</p>
 			</div>
-			<div class="col-lg-4 col-md-6 w3layouts mt-sm-5 mt-4 w3-icon-grid1">
+			<div class="col-lg-4 col-md-6 w3layouts mt-lg-0 mt-sm-5 mt-4 w3-icon-grid1">
 				<h3><span class="fa mr-2 fa-camera" aria-hidden="true"></span> Photoshop</h3>
 				<p>It uses a layer-based editing system that enables image creation and altering with multiple overlays that support transparency. Layers can also act as masks or filters, altering underlying colors. Shadows and other effects can be added to the layers. Photoshop actions include automation features to reduce the need for repetitive tasks. An option known as Photoshop CC (Creative Cloud) allows users to work on content from any computer.</p>
 			</div>
@@ -146,7 +188,8 @@
 				<div class="exp wthree">	
 					<h4>Nss Kpt Vhss  <span>2015 - 2017</span></h4>
 					<div class="clearfix"></div>
-					<p>Ottapalam,Palakkad,kerala, Pincode:679103.</p>
+				    <p>Ottapalam,Palakkad,kerala, Pincode:679103.</p>
+	
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-6 mt-md-0 mt-2">
@@ -155,9 +198,20 @@
 					<h4>Aspire College Of Advanced Studies <span>2017 - 2020</span></h4>
 					<div class="clearfix"></div>
 					<p>Mudavannoor,Thrithala,palakkad,kerala, pincode:679534.</p>
+
 				</div>
 			</div>
-			
+			<div class="col-lg-4 col-md-6 mt-md-0 mt-2">
+				<div class="exp wthree">	
+					<h3><center><b><i><u> E-DESIGN</u></i></b></center></h3>
+					<div class="clearfix"><p><center> July 2020 to Present</center></p></div>
+					<br>
+				<h5><center><b>Web Designer/Graphic Illustrator</b></center></h5>
+				<br>
+				<p><center><b> I started this programme as a free time hobby,<br>Providing customers small type graphic <br>Illustrations <br>And of course,I drsign
+				intractive websites for <br>Customers as they requested.</b> </center></p>
+				</div>
+			</div>
 		</div>
 	</div>
 </section>
@@ -165,53 +219,7 @@
 
 
 <!-- gallery -->
-<div class="gallery py-5" id="projects">
-	<div class="container py-3">
-		<h3 class="heading"> MY Projects</h3>
-		<div class="row gallery_grid-more project-grids w3ls">
-			<div class="col-lg-3 col-md-4 col-6 w3layoutsits_w3layouts_gallery_grid1">
-				<a href="#popup2">
-					<img src="images/exp1.jpg" alt=" " class="img-fluid" />
-				</a>
-			</div>
-			<div class="col-lg-3 col-md-4 col-6 w3layoutsits_w3layouts_gallery_grid1">
-				<a href="#popup3">
-					<img src="images/exp2.jpg" alt=" " class="img-fluid" />
-				</a>
-			</div>
-			<div class="col-lg-3 col-md-4 col-6 w3layoutsits_w3layouts_gallery_grid1 mt-md-0 mt-4">
-				<a href="#popup4">
-					<img src="images/exp3.jpg" alt=" " class="img-fluid" />
-				</a>
-			</div>
-			<div class="col-lg-3 col-md-4 col-6 w3layoutsits_w3layouts_gallery_grid1 mt-lg-0 mt-4">
-				<a href="#popup5">
-					<img src="images/exp1.jpg" alt=" " class="img-fluid" />
-				</a>
-			</div>
-			<div class="col-lg-3 col-md-4 col-6 w3layoutsits_w3layouts_gallery_grid1 mt-4">
-				<a href="#popup6">
-					<img src="images/exp2.jpg" alt=" " class="img-fluid" />
-				</a>
-			</div>
-			<div class="col-lg-3 col-md-4 col-6 w3layoutsits_w3layouts_gallery_grid1 mt-4">
-				<a href="#popup7">
-					<img src="images/exp3.jpg" alt=" " class="img-fluid" />
-				</a>
-			</div>
-			<div class="col-lg-3 col-md-4 col-6 w3layoutsits_w3layouts_gallery_grid1 mt-4">
-				<a href="#popup8">
-					<img src="images/exp1.jpg" alt=" " class="img-fluid" />
-				</a>
-			</div>
-			<div class="col-lg-3 col-md-4 col-6 w3layoutsits_w3layouts_gallery_grid1 mt-4">
-				<a href="#popup9">
-					<img src="images/exp2.jpg" alt=" " class="img-fluid" />
-				</a>
-			</div>
-		</div>
-	</div>
-</div>
+
 <!-- //gallery --> 
 
 <!-- text -->
