--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 			</div>
 			
 			<div class="col-lg-4 col-md-6 w3layouts mt-lg-0 mt-sm-5 mt-4 w3-icon-grid1">
-				<h3><span class="fa mr-2 fa-laptop" aria-hidden="true"></span>WED DEVELOPMENT</h3>
+				<h3><span class="fa mr-2 fa-laptop" aria-hidden="true"></span>WEB DEVELOPMENT</h3>
 				<p>Web Development is developing a web site ,it is the core part also called Back-end.The web site wants to store some datas of user,so developer done in this stage using sql.Web development can range from developing a simple single static page of plain text to complex Web-based internet applications.had knowledge in Ja</p>
 			</div>
 			<div class="col-lg-4 col-md-6 w3layouts mt-lg-0 mt-sm-5 mt-4 w3-icon-grid1">
@@ -208,7 +208,7 @@
 					<br>
 				<h5><center><b>Web Designer/Graphic Illustrator</b></center></h5>
 				<br>
-				<p><center><b> I started this programme as a free time hobby,<br>Providing customers small type graphic <br>Illustrations <br>And of course,I drsign
+				<p><center><b> I started this programme as a free time hobby,<br>Providing customers small type graphic <br>Illustrations <br>And of course,I design
 				intractive websites for <br>Customers as they requested.</b> </center></p>
 				</div>
 			</div>
@@ -247,7 +247,7 @@
 						<span class="fa fa-map-marker" aria-hidden="true"></span>
 					</div>
 					<div class="col-11">
-						<p> MTK nagar Kanniyampuram,Ottapalam,Palkkad,kerala</p>
+						<p> MTK nagar Kanniyampuram,Ottapalam,Palakkad,kerala</p>
 						<p> Ottapalam - 679104</p>
 					</div>
 					<div class="col-1 pr-0 icon my-2">
