--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 		<div class="row about-grids">
 			<div class="col-lg-4">
 				<h4 class="">Hi i'm RANJITH R</h4>
-				<p class="my-4">Am a web designer and web developer who starting carrier,had experience in Designing with HTML:5,Bootstrap and jquery and Developing with java. Am fueled by my passion to becoming a expert programmer. I considered mysel a "learner" eager to learn new technologies in programming. I belives maindfulness in the work place is the key to success.</p>
+				<p class="my-4">Am a web designer and web developer who starting carrier,had experience in Designing with HTML:5,Bootstrap and jquery and Developing with java. Am filled by my passion to becoming a expert programmer. I considered myself as a "learner" eager to learn new technologies in programming. I belives mindfulness in the work place is the key to success.</p>
 			
 			</div>
 			<div class="col-lg-4 ">
@@ -164,7 +164,7 @@
 			</div>
 			
 			<div class="col-lg-4 col-md-6 w3layouts mt-lg-0 mt-sm-5 mt-4 w3-icon-grid1">
-				<h3><span class="fa mr-2 fa-laptop" aria-hidden="true"></span>WED DEVELOPMENT</h3>
+				<h3><span class="fa mr-2 fa-laptop" aria-hidden="true"></span>WEB DEVELOPMENT</h3>
 				<p>Web Development is developing a web site ,it is the core part also called Back-end.The web site wants to store some datas of user,so developer done in this stage using sql.Web development can range from developing a simple single static page of plain text to complex Web-based internet applications.had knowledge in Ja</p>
 			</div>
 			<div class="col-lg-4 col-md-6 w3layouts mt-lg-0 mt-sm-5 mt-4 w3-icon-grid1">
@@ -247,7 +247,7 @@
 						<span class="fa fa-map-marker" aria-hidden="true"></span>
 					</div>
 					<div class="col-11">
-						<p> MTK nagar Kanniyampuram,Ottapalam,Palkkad,kerala</p>
+						<p> MTK nagar Kanniyampuram,Ottapalam,Palakkad,kerala</p>
 						<p> Ottapalam - 679104</p>
 					</div>
 					<div class="col-1 pr-0 icon my-2">
