--- a/index.html
+++ b/index.html
@@ -35,7 +35,19 @@
 	<!--web font--><link href="//fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i&amp;subset=latin-ext" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<!--//web font-->
-
+	<style>
+		/* Chrome, Safari, Edge, Opera */
+		input::-webkit-outer-spin-button,
+		input::-webkit-inner-spin-button {
+		  -webkit-appearance: none;
+		  margin: 0;
+		}
+		
+		/* Firefox */
+		input[type=number] {
+		  -moz-appearance: textfield;
+		}
+	</style>
 </head>
 
 <body>
@@ -58,8 +70,8 @@
 				<li class="mr-lg-4 mr-3"><a href="#experience">Education</a></li>
 				<li class="mr-lg-4 mr-3">
                 <!-- First Tier Drop Down -->
-                <label for="drop-2" class="toggle">Dropdown <span class="fa fa-angle-down" aria-hidden="true"></span> </label>
-                <a href="#">Dropdown <span class="fa fa-angle-down" aria-hidden="true"></span></a>
+                <label for="drop-2" class="toggle">Skills<span class="fa fa-angle-down" aria-hidden="true"></span> </label>
+                <a href="#">Skills<span class="fa fa-angle-down" aria-hidden="true"></span></a>
                 <input type="checkbox" id="drop-2"/>
                 <ul>
 					<li><a href="#skill-section">Skills</a></li>
@@ -392,7 +404,17 @@
 					<input type="email" name="Email" value="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required="">
 					<div class="clearfix"></div>
 					<label><span class="fa mr-2 fa-phone" aria-hidden="true"></span>Phone</label>
-					<input type="text" name="Phone" value="Phone" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Phone';}" required="">
+					<input type="number" name="Phone" value="Phone" min="10" style="outline: none;
+					width: 83%;
+					padding: .9em 1.3em;
+					font-size: 15px;
+					letter-spacing: 1px;
+					color: #888;
+					border: none;
+					border: 1px solid #ccc;
+					background: none;
+					margin-bottom: 1.5em;
+					border-radius: 5px;" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Phone';}" required=""  placeholder="Phone">
 					<div class="clearfix"></div>
 					<label><span class="fa mr-2 fa-edit" aria-hidden="true"></span>Message</label>
 					<textarea name="Message" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Message...';}" required="">Message...</textarea>
