--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <!DOCTYPE html>
 <html lang="en" style="scroll-behavior: smooth;">
 <head>
-<title>Activity Personal Category Flat Bootstrap Responsive Website Template | Home : W3layouts</title>
+<title>Ranjith R</title>
 	
 	<!-- Meta tag Keywords -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
